--- a/src/style/style.css
+++ b/src/style/style.css
@@ -181,8 +181,10 @@ textarea{
     font-family: 'Fira Sans', Times, serif;
     font-size: 15px; 
     font-weight:500;
-    -o-text-overflow: clip;
-    text-overflow: clip;/*
+    resize: none;
+    overflow: hidden;
+/*  -o-text-overflow: clip;
+    text-overflow: clip; 
     -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
     -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
     -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
@@ -193,24 +195,19 @@ textarea{
     font-weight:300;
     color:#b7b7b7;
 }
-
+/* 
 :-moz-placeholder{
     font-weight:300;
     color:#b7b7b7;
 }
-
+ */
 ::-moz-placeholder{
     font-weight:300;
     color:#b7b7b7;
 }
 
 :-ms-input-placeholder{
-    font-weight:300;
-    color:#b7b7b7;
-}
-
-::-ms-input-placeholder{
-    font-weight:300;
+    font-weight:300 !important;
     color:#b7b7b7;
 }
 
