--- a/src/style/style.css
+++ b/src/style/style.css
@@ -211,6 +211,9 @@ textarea{
     color:#b7b7b7;
 }
 
+input[type=text]::-ms-clear {  display: none; width : 0; height: 0; }
+input[type=text]::-ms-reveal {  display: none; width : 0; height: 0; }
+
 h3{
     margin-top: 11px;
     margin-bottom: 11px;
