--- a/index.hbs
+++ b/index.hbs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>{{htmlWebpackPlugin.options.title}}</title>
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=9b3d5e29-f442-4032-832b-2b8597133ce1&lang=ru_RU" type="text/javascript"></script>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <meta charset="UTF-8">
+    <title>{{htmlWebpackPlugin.options.title}}</title>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=9b3d5e29-f442-4032-832b-2b8597133ce1&lang=ru_RU"
+        type="text/javascript"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <div id="map"></div>
 </body>
